Changed CORE_BRANCH env variable to stable20

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
 
 env:
   global:
-    - CORE_BRANCH=master
+    - CORE_BRANCH=stable20
     - APP_NAME=files_trackdownloads
   matrix:
     - DB=sqlite
